# TTM

rwa_tokenization_model/: README.md  modification.md  params.yaml  pyproject.toml  requirements.txt
rwa_tokenization_model/docs/: methodology_note.md  source_map.md
rwa_tokenization_model/outputs/reports/: model_results.xlsx
rwa_tokenization_model/outputs/tables/: adoption_scenarios.csv  adoption_stress_grid.csv  baseline_summary.csv  book_market_wacc.csv  monte_carlo_simulations.csv  parameters_used.csv  reinvestment_sensitivity.csv  risk_adjusted_capacity.csv  sensitivity_summary.csv  stress_scenarios.csv
rwa_tokenization_model/outputs/thesis_ready/: executive_summary.md  figure_captions.md  table_3_1_company_data.csv  table_3_2_variable_definitions.csv  table_3_3_scenario_assumptions.csv  table_3_4_baseline_results.csv  table_3_5_adoption_results.csv  table_3_6_stress_results.csv  table_3_7_monte_carlo_summary.csv  table_3_8_sensitivity_summary.csv  table_3_9_reinvestment_sensitivity.csv
rwa_tokenization_model/src/rwa_model/: __init__.py  charts.py  cli.py  config.py  engine.py  formulas.py  monte_carlo.py  scenarios.py  sensitivity.py  tables.py  thesis_outputs.py  utils.py
rwa_tokenization_model/src/rwa_tokenization_model.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rwa_tokenization_model/tests/: test_config.py  test_engine.py  test_formulas.py  test_output_consistency.py  test_thesis_invariants.py
