[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwa-tokenization-model"
version = "0.1.0"
description = "Tokenized Collateral Efficiency Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
rwa-model = "rwa_model.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
